<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_app_02"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saurav.myads.MyApp_02">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <!-- adId_1 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_1_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_1"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_1" />

            <!-- adId_2 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_2_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_2"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_2" />

            <!-- adId_3 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_3_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_3"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_3" />

            <!-- adId_4 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_4_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_4"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_4" />

            <!-- adId_5 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_5_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_5"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_5" />

            <!-- adId_6 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_6_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_6"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_6" />

            <!-- adId_7 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_7_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_7"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_7" />

            <!-- adId_8 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_8_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_8"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_8" />

            <!-- adId_9 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_9_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_9"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_9" />

            <!-- adId_10 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_10_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_02_banner_addId_10"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/app_02_banner_addId_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="10sp"
                android:layout_margin="10sp"
                android:onClick="ind_1_btn"
                >
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="ind_1_btn"
                    android:text="@string/app_02_interstitial_addId_name"/>
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="ind_1_btn"
                    android:text="@string/app_02_interstitial_addId"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="10sp"
                android:layout_margin="10sp"
                android:onClick="reward_1_btn"
                >
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="reward_1_btn"
                    android:text="@string/app_02_rewarded_addId_name"/>
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="reward_1_btn"
                    android:text="@string/app_02_rewarded_addId"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
