<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saurav.myads.Sample">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <!-- adId_1 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sample_banner_addId_1_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_banner_addId_1"/>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                ads:adUnitId="@string/sample_banner_addId_1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="10sp"
                android:layout_margin="10sp"
                android:onClick="ind_1_btn"
                >
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="ind_1_btn"
                    android:text="@string/sample_interstitial_addId_name"/>
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="ind_1_btn"
                    android:text="@string/sample_interstitial_addId"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="10sp"
                android:layout_margin="10sp"
                android:onClick="reward_1_btn"
                >
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="reward_1_btn"
                    android:text="@string/sample_rewarded_addId_name"/>
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="reward_1_btn"
                    android:text="@string/sample_rewarded_addId"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
