<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saurav.myads.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="10sp"
                android:layout_margin="10sp"
                android:onClick="sample_btn"
                >
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sample_btn"
                    android:text="@string/sample_Id_name"/>
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sample_btn"
                    android:text="@string/sample_app_Id"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="10sp"
                android:layout_margin="10sp"
                android:onClick="btn_1"
                >
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="btn_1"
                    android:text="@string/app_01_Id_name"/>
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="btn_1"
                    android:text="@string/app_01_Id"/>
         </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="10sp"
                android:layout_margin="10sp"
                android:onClick="btn_2"
                >
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="btn_2"
                    android:text="@string/app_02_Id_name"/>
                <TextView
                    android:textColor="@color/colorBackGround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="btn_2"
                    android:text="@string/app_02_Id"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
